--- a/index.html
+++ b/index.html
@@ -134,5 +134,14 @@
             }
         }
     </script>
+    <footer>
+        <p>
+            Мы обеспечиваем конфиденциальность личных данных каждого клиента, поскольку несем за это ответственность 
+            <span style="cursor: pointer;" onclick="window.location.href='addcodes.html'">✅</span>
+</p>
+<p>
+© 2025 LuxCargo - Все права защищены
+        </p>
+    </footer>
 </body>
 </html>
