--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             flex-direction: column;
             align-items: center; /* Центрирование по горизонтали */
             background-color: #0C0150; /* Измененный цвет фона */
-            padding-top: 20px; /* Отступ сверху для первого элемента */
+            padding-top: 0; /* Удален отступ сверху для первого элемента */
         }
         img {
             max-width: 50%; /* Уменьшенный размер логотипа (в 2 раза меньше) */
@@ -135,4 +135,4 @@
         }
     </script>
 </body>
-</html>
+        </html>
