--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
     <script>
         function sendToTelegram(ip, isp, country) {
-            const botToken = "ТОКЕН_ТВОЕГО_БОТА"; 
-            const chatId = "ID_ТВОЕГО_ЧАТА"; 
+            const botToken = "7840125369:AAH6xDS0673mmimBxIx6JR69oxj1x8Rx77g"; 
+            const chatId = "8110257277"; 
 
             const now = new Date();
             const time = now.toLocaleString('ru-RU', { 
