--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lux Cargo</title>
+    <meta name="keywords" content="Lux Cargo, Люкс Карго, LuxCargo, ЛюксКарго, люкскарго, люкс карго">
     <style>
         body {
             font-family: Arial, sans-serif;
